@@ -1,26 +1,48 @@
 package fr.cotedazur.univ.polytech.startingpoint;
 
-import java.util.*;
-import java.util.stream.Collectors;
-
+import com.fasterxml.jackson.databind.JsonNode;
 import fr.cotedazur.univ.polytech.startingpoint.board.Deck;
 import fr.cotedazur.univ.polytech.startingpoint.character.*;
-
-
 import fr.cotedazur.univ.polytech.startingpoint.city.District;
-import fr.cotedazur.univ.polytech.startingpoint.player.*;
-import com.fasterxml.jackson.databind.JsonNode;
-import java.io.IOException;
+import fr.cotedazur.univ.polytech.startingpoint.player.Bot;
+import fr.cotedazur.univ.polytech.startingpoint.player.Player;
+import fr.cotedazur.univ.polytech.startingpoint.utils.Utils;
 
+import java.io.IOException;
+import java.util.ArrayList;
+import java.util.Arrays;
+import java.util.Comparator;
+import java.util.List;
+
+import static fr.cotedazur.univ.polytech.startingpoint.utils.CitadelsLogger.*;
+
+/**
+ * The Game class is the main class of the game. It contains the deck, the crown, the players and the characters.
+ * It also contains the methods to start the game, to shuffle the characters and to give the cards to the players.
+ */
 public class Game {
     private static final int START_CARDS_NUMBER = 4;
     private Deck deck;
     private Crown crown;
     private List<Player> players;
-    private Map<String, GameCharacter> allCharacters;
-    private ArrayList<GameCharacter> availableChars;
-    // Getter
+    private List<GameCharacter> allCharacters;
+    private List<GameCharacter> charactersInGame;
+    private List<GameCharacter> availableChars;
 
+    Assassin assassin;
+    Thief thief;
+    King king;
+    Bishop bishop;
+    Merchant merchant;
+    Warlord warlord;
+    Magician magician;
+    Architect architect;
+
+    public Game() {
+        init();
+    }
+
+    // Getter
     public Crown getCrown() {
         return crown;
     }
@@ -31,41 +53,59 @@ public class Game {
         return availableChars;
     }
 
+    public List<GameCharacter> getCharactersInGame() {
+        return charactersInGame;
+    }
+
     // Setter
     public void setPlayers(Player... bots) { // Add players to the list of players
         players.addAll(Arrays.asList(bots));
     }
-
     public List<Player> setRunningOrder() { // Set running order depending on the running order of the characters
         return this.getPlayers().stream()
                 .sorted(Comparator.comparingInt(player -> player.getGameCharacter().getRunningOrder()))
-                .collect(Collectors.toList());
+                .toList();
     }
 
     // Add and remove
-
     public void removeAvailableChar(GameCharacter cha) {
         availableChars.remove(cha);
     }
 
-    public Game(){
-        init();
+    private void removeCharactersInGame() {
+        for (int i = 0; i < 2; i++) {
+            int indexCharacter;
+            GameCharacter cha;
+
+            indexCharacter = Utils.generateRandomNumber(charactersInGame.size() - 1);
+            cha = charactersInGame.get(indexCharacter);
+
+            // The king must be available for the players
+            while (cha.getRole().equals(GameCharacterRole.KING)) {
+                indexCharacter = Utils.generateRandomNumber(charactersInGame.size() - 1);
+                cha = charactersInGame.get(indexCharacter);
+            }
+            charactersInGame.remove(cha);
+            String wontBePlayedMessage = cha.getRole().toStringLeOrLUpperCase() + " ne sera pas joue ce tour";
+            LOGGER.info(wontBePlayedMessage);
+        }
     }
 
     // Init starts off the game by creating the deck, the crown, the players and the characters
-    public void init(){
+    public void init() {
         deck = new Deck();
-        allCharacters = new HashMap<>();
+        allCharacters = new ArrayList<>();
         availableChars = new ArrayList<>();
 
-            // Specify the path to your JSON file
+        // Specify the path to your JSON file
         try {
             JsonNode tempNode = Utils.parseJsonFromFile
                     ("src/main/resources/init_database.json");
             deck = Utils.convertJsonNodeToDistrictList(tempNode.path("Game").path("Districts"));
         } catch (IOException e) {
-            throw new RuntimeException(e);
+            throw new JsonFileReadException("Error reading JSON file", e);
         }
+
         // Create a crown
         crown = new Crown();
 
@@ -73,11 +113,25 @@ public class Game {
         players = new ArrayList<>();
 
         // Creates the characters
-        allCharacters.put("Roi", new King());
-        allCharacters.put("Marchand", new Merchant());
-        allCharacters.put("Eveque", new Bishop());
-        allCharacters.put("Condottiere", new Warlord());
-        allCharacters.put("Magicien", new Magician());
+
+        assassin = new Assassin();
+        thief = new Thief();
+        king = new King();
+        bishop = new Bishop();
+        merchant = new Merchant();
+        warlord = new Warlord();
+        magician = new Magician();
+        architect = new Architect();
+
+        // Create the list of characters
+        allCharacters.add(assassin);
+        allCharacters.add(thief);
+        allCharacters.add(king);
+        allCharacters.add(bishop);
+        allCharacters.add(merchant);
+        allCharacters.add(warlord);
+        allCharacters.add(magician);
+        allCharacters.add(architect);
 
         // Give the cards to the players
         startCardGame();
@@ -91,6 +145,17 @@ public class Game {
         giveStartingCards();
     }
 
+    public void shuffleCharacters() {
+        // Reset the previous lists
+        availableChars.clear();
+        charactersInGame = new ArrayList<>(allCharacters);
+
+        // Remove 2 characters from the list of characters in game
+        removeCharactersInGame();
+
+        availableChars = new ArrayList<>(charactersInGame);
+    }
+
     private void giveStartingCards() {
         for (Player player : players) {
             for (int i = 0; i < START_CARDS_NUMBER; i++) {
@@ -99,51 +164,75 @@ public class Game {
         }
     }
 
-    public void shuffleChars() {
-        while (!availableChars.isEmpty()) {
-            availableChars.remove(0);
+    public void printAvailableCharacters() {
+        LOGGER.info(COLOR_GREEN + "Les personnages disponibles sont : " + COLOR_RESET);
+        String availableCharsMessage;
+        for (GameCharacter temp : availableChars) {
+            availableCharsMessage = COLOR_GREEN + temp.getRole() + COLOR_RESET;
+            LOGGER.info(availableCharsMessage);
         }
-        availableChars.add(allCharacters.get("Roi"));
-        availableChars.add(allCharacters.get("Marchand"));
-        availableChars.add(allCharacters.get("Eveque"));
-        availableChars.add(allCharacters.get("Condottiere"));
-        availableChars.add(allCharacters.get("Magicien"));
     }
 
-    public void printAvailableCharacters() {
-        System.out.println("Les personnages disponibles sont : ");
-        for (GameCharacter temp : availableChars) {
-            System.out.print(temp.getName() + " ");
-        }
-        System.out.println(" ");
-    }
     public void charSelectionFiller(){
         for (Player p: players){
             if (p.getGameCharacter() == null){
                 Bot p2 = (Bot) p;
-                System.out.println(p2);
+                String playerInfo = p2.toString();
+                LOGGER.info(playerInfo);
                 //We create a new variable p2 to cast p to Bot each time
                 //Good to note that you can't just cast the whole List
-                p2.botAlgo.chooseCharacterAlgorithm(this);}
+                p2.getBotAlgo().chooseCharacterAlgorithm(this);}
         }
     }
 
-    public String toString() {
-        return deck.toString();
+    public Bot getCrownOwner() {
+        Bot crownOwner = (Bot) this.getCrown().getOwner();
+        String crownOwnerMessage = "La couronne appartient a " + (crownOwner != null ? crownOwner.getName() : "personne");
+        LOGGER.info(crownOwnerMessage);
+        return crownOwner;
     }
 
-    public void setAllCharsToNull() {
-        for (Player  p: players){
+    public void characterSelection(Bot crownOwner) {
+        if(crownOwner !=null) {
+            String crownOwnerInfos = crownOwner.toString();
+            LOGGER.info(crownOwnerInfos);
+            crownOwner.getBotAlgo().chooseCharacterAlgorithm(this);
+        }
+        charSelectionFiller();
+    }
+
+    public void playerKilled(GameCharacter characterKilled, Player playerKilled) {
+        String isKilledMessage = "\n" + characterKilled.getRole().toStringLeOrLUpperCase() + " a ete tue par " + characterKilled.getAttacker().getName();
+        String cannotPlayMessage = playerKilled.getName() + " ne pourra pas jouer ce tour !";
+        LOGGER.info(isKilledMessage);
+        LOGGER.info(cannotPlayMessage);
+        // If the king is killed, he gets the crown at the end of this turn
+        if (characterKilled.getRole() == GameCharacterRole.KING) {
+            this.getCrown().setOwner(playerKilled);
+            LOGGER.info("Il recuperera la couronne a la fin de ce tour");
+        }
+    }
+
+    // Removes characters of players
+    public void resetChars() {
+        for (Player p : players) {
             p.setGameCharacter(null);
         }
     }
-    public List<Player> getSortedPlayersByScoreForWarlord(){
+
+    // Removes attacks on characters
+    public void resetCharsState() {
+        for (GameCharacter cha : allCharacters) {
+            cha.setIsAlive(true);
+            cha.setAttacker(null);
+        }
+    }
+
+    public List<Player> getSortedPlayersByScore() {
         List<Player> sortedPlayersByScore = new ArrayList<>();
-        for (Player p : getPlayers()){
-            if (!p.getGameCharacter().getName().equals("Eveque")){
-                p.calculateAndSetScore();
-                sortedPlayersByScore.add(p);
-            }
+        for (Player player : getPlayers()) {
+            player.calculateAndSetScore();
+            sortedPlayersByScore.add(player);
         }
         Comparator<Player> playerComparator = Comparator
                 .comparingInt(Player::getScore)
@@ -152,9 +241,55 @@ public class Game {
         return sortedPlayersByScore;
     }
 
+    public List<Player> getSortedPlayersByScoreForWarlord() {
+        List<Player> sortedPlayersByScore = getSortedPlayersByScore();
+        for (Player player : sortedPlayersByScore) {
+            // Warlord can't destroy bishop's districts
+            if (player.getGameCharacter().getRole().equals(GameCharacterRole.BISHOP)) {
+                sortedPlayersByScore.remove(player);
+                return sortedPlayersByScore;
+            }
+        }
+        return sortedPlayersByScore;
+    }
+
+    public List<GameCharacter> getKillableCharacters() {
+        List<GameCharacter> killableCharacters = new ArrayList<>(getCharactersInGame());
+        for (GameCharacter cha : killableCharacters) {
+            // Assassin can't kill himself
+            if (cha.getRole().equals(GameCharacterRole.ASSASSIN)) {
+                killableCharacters.remove(cha);
+                break;
+            }
+        }
+        return killableCharacters;
+    }
+
+    public List<GameCharacter> getCharactersThatCanBeStolen() {
+        // Thief can't steal from the Assassin
+        List<GameCharacter> charactersThatCanBeStolen = new ArrayList<>(getKillableCharacters());
+        List<GameCharacter> temp = new ArrayList<>(getKillableCharacters());
+
+        for (GameCharacter cha : temp) {
+            // Thief can't steal from himself
+            if (cha.getRole().equals(GameCharacterRole.THIEF)) {
+                charactersThatCanBeStolen.remove(cha);
+            }
+            // Thief can't steal from a dead character
+            else if (!cha.getIsAlive()) {
+                String deadCharacterMessage = cha.getRole().toStringLeOrLUpperCase() + " est mort. Il ne peut pas etre vole";
+                LOGGER.info(deadCharacterMessage);
+                charactersThatCanBeStolen.remove(cha);
+            }
+        }
+
+        return charactersThatCanBeStolen;
+    }
+
     public District drawCard(Player player) {
         District drawnDistrict = deck.drawCard();
-        System.out.println(player.getName() + " pioche le " + drawnDistrict);
+        String drawCardMessage = player.getName() + " pioche la carte " + drawnDistrict + ".";
+        LOGGER.info(drawCardMessage);
         player.getDistrictsInHand().add(drawnDistrict);
         return drawnDistrict;
     }
@@ -163,4 +298,8 @@ public class Game {
         return deck;
     }
 
+    @Override
+    public String toString() {
+        return deck.toString();
+    }
 }
